--- a/src/main/resources/templates/entries/allEntries.html
+++ b/src/main/resources/templates/entries/allEntries.html
@@ -5,17 +5,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Mocked Services</title>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/datatables/1.10.12/css/dataTables.bootstrap4.min.css"
+          rel="stylesheet"/>
+    <link rel="stylesheet" type="text/css" media="all" th:href="@{/css/styles.css}" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <!-- Bootstrap core CSS -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.min.css" rel="stylesheet">
     <!-- Material Design Bootstrap -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.5.15/css/mdb.min.css" rel="stylesheet">
-
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/datatables/1.10.12/js/jquery.dataTables.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/datatables/1.10.13/js/dataTables.bootstrap4.min.js"></script>
     <script type="text/javascript"
             src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/js/bootstrap.min.js"></script>
     <!-- MDB core JavaScript -->
     <script type="text/javascript"
             src="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.5.15/js/mdb.min.js"></script>
+    <script th:src="@{/scripts/table.js}"></script>
 <body style="background-color:#ededed">
 <style>
     table th {
@@ -28,7 +33,7 @@
 
 </style>
 <nav style="margin-bottom: 40px;" class="navbar navbar-expand-sm bg-dark navbar-dark">
-    <ul class="navbar-nav">
+    <ul class="navbar-nav" style="float:left">
         <h4 style="margin-top:10px" class="navbar-brand">INTERNAL PROXY</h4>
         <a class="btn btn-success" href="#" th:href="@{/create}">
             <span class="fa fa-plus-circle" aria-hidden="true"></span> Add </a>
@@ -57,11 +62,11 @@
             </li>
         </ul>
         <ul class="navbar-verison justify-content-end" style="float:right !important">
-            <h3 style="color:white; margin-bottom:-15px; font-size: 20" th:text="${'Ver: ' + appVersion}">??</h3>
+            <h3 style="color:white; font-size: 20" th:text="${'Ver: ' + appVersion}">??</h3>
         </ul>
     </div>
 </nav>
-<div class="row justify-content-center">
+<div class="row justify-content-center" style="margin-right: 0px">
     <div class="col-md-auto">
         <div class="card">
             <div class="card-body">
@@ -72,7 +77,7 @@
                     </div>
                     <!-- Grid column -->
                 </div>
-                <table class="table table-hover table-responsive mb-2">
+                <table id="sortable" class="table table-hover table-responsive mb-2">
                     <thead>
                     <th class="th-lg"> isMocked</th>
                     <th class="th-lg"> ServiceName</th>
@@ -90,14 +95,14 @@
 
                     <tr th:each="entry : ${entries}">
                         <td>
-                        <b th:if="${entries[__${entry.key}__].mocked}" style="color:green">
-                             <i class="fa fa-cog fa-spin" style="font-size:22px">   </i>
-                            &nbsp;Mocked
-                        </b>
+                            <b th:if="${entries[__${entry.key}__].mocked}" style="color:green">
+                                <i class="fa fa-cog fa-spin" style="font-size:22px"> </i>
+                                &nbsp;Mocked
+                            </b>
                             <b th:if="${!entries[__${entry.key}__].mocked}" style="color:red">
-                             <i class="fa fa-refresh fa-spin" style="font-size:22px">  </i>
+                                <i class="fa fa-refresh fa-spin" style="font-size:22px"> </i>
                                 &nbsp;Forwarding
-                        </b>
+                            </b>
                         </td>
 
                         <td><span th:text="${entry.key}"> ServiceName </span></td>
