--- a/src/main/resources/templates/entries/add.html
+++ b/src/main/resources/templates/entries/add.html
@@ -29,15 +29,15 @@
     <a class="btn btn-info" href="#" th:href="@{/all}"> Back to All Services </a>
     <!--</ul>-->
 </nav>
-<div class="container" style="margin-left: 40px">
-    <div class="row"></div>
-    <div class="row">
-        <div class="col-lg-auto">
-            <form action="#" class="form-horizontal"
-                  th:action="@{/save}"
-                  th:object="${form}"
-                  method="post">
-                <fieldset style="display: inline-block;">
+<div class="row justify-content-center">
+    <div class="col-md-auto">
+        <div class="card">
+            <div class="card-body">
+                <form action="#" class="form-horizontal"
+                      th:action="@{/save}"
+                      th:object="${form}"
+                      method="post">
+                    <fieldset style="display: inline-block;">
 					<span>
                         <h1 style="display: inline-block;"> Add Service </h1>
 						    <input type="submit" id="submitButton" class="btn btn-blue-grey" th:value="Save"
@@ -46,82 +46,86 @@
 						    <input type="reset" id="resetButton" class="btn btn-cyan" th:value="Reset"
                                    style="float: right;">
 					</span>
-                    <table class="table table-striped">
-                        <thead>
-                        <tr>
-                            <th> isMocked</th>
-                            <th> Service</th>
-                            <th> Route</th>
-                            <th> Status</th>
-                            <th> MockResponse</th>
-                        </tr>
-                        </thead>
-                        <tbody>
-                        <tr th:object="${form}">
-                            <td>
-                                <!--<label class="bs-switch">-->
-                                <input type="checkbox" th:field="*{mocked}" class="styled">
-                                <!--<span class="slider round"></span>-->
-                                <!--</label>-->
-                            </td>
-                            <td><input class="form-control form-control-lg" th:placeholder="ServiceName "
-                                       th:field="*{name}" required pattern="^[a-zA-Z0-9_&-]+$"/></td>
-                            <td><input class="form-control form-control-lg" th:placeholder="RealUrl "
-                                       th:field="*{realUrl}" required pattern="https?://.+"/>
-                            </td>
-                            <td>
-                                <select class="browser-default custom-select form-control-lg" th:field="*{status}">
-                                    <option th:each="state : ${T(org.springframework.http.HttpStatus).values()}"
-                                            th:value="${{state}}"
-                                            th:text="${state}"
-                                            th:with="s=${T(org.springframework.http.HttpStatus).OK}"
-                                            th:selected="${s}"
-                                    >
-                                    </option>
-                                </select>
-                            </td>
-                            <!--<td><input th:placeholder="MockResponse " th:field="*{mock}" required/></td>-->
-                            <td>
-                                <button type="button" class="btn btn-primary" data-toggle="modal"
-                                        data-target="#exampleModal">Put
-                                </button>
-                            </td>
-                            <div class="modal right fade" id="exampleModal" tabindex="-1" role="dialog"
-                                 aria-labelledby="exampleModalLabel" aria-hidden="true">
-                                <div class="modal-dialog modal-full-height modal-right" role="document">
-                                    <div class="modal-content">
-                                        <div class="modal-header">
-                                            <h4 class="modal-title w-100" id="exampleModalLabel">Mock Response</h4>
-                                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                                                <span aria-hidden="true">&times;</span>
-                                            </button>
-                                        </div>
-                                        <div class="modal-body">
-                                            <form>
-                                                <div class="form-group">
-                                                    <label for="message-text" class="col-form-label">Please enter the
-                                                        text to be returned as the service response</label>
-                                                    <textarea rows="40" th:field="*{mock}"
-                                                              class="form-control"
-                                                              id="message-text"></textarea>
-                                                </div>
-                                            </form>
-                                        </div>
-                                        <div class="modal-footer justify-content-center">
-                                            <button type="button" class="btn btn-primary" data-dismiss="modal">Submit
-                                            </button>
-                                            <!--<button type="button" class="btn btn-primary">Submit</button>-->
+                        <table class="table table-striped">
+                            <thead>
+                            <tr>
+                                <th> isMocked</th>
+                                <th> Service</th>
+                                <th> Route</th>
+                                <th> Status</th>
+                                <th> MockResponse</th>
+                            </tr>
+                            </thead>
+                            <tbody>
+                            <tr th:object="${form}">
+                                <td>
+                                    <!--<label class="bs-switch">-->
+                                    <input type="checkbox" th:field="*{mocked}" class="styled">
+                                    <!--<span class="slider round"></span>-->
+                                    <!--</label>-->
+                                </td>
+                                <td><input class="form-control form-control-lg" th:placeholder="ServiceName "
+                                           th:field="*{name}" required pattern="^[a-zA-Z0-9_&-]+$"/></td>
+                                <td><input class="form-control form-control-lg" th:placeholder="RealUrl "
+                                           th:field="*{realUrl}" required pattern="https?://.+"/>
+                                </td>
+                                <td>
+                                    <select class="browser-default custom-select form-control-lg" th:field="*{status}">
+                                        <option th:each="state : ${T(org.springframework.http.HttpStatus).values()}"
+                                                th:value="${{state}}"
+                                                th:text="${state}"
+                                                th:with="s=${T(org.springframework.http.HttpStatus).OK}"
+                                                th:selected="${s}"
+                                        >
+                                        </option>
+                                    </select>
+                                </td>
+                                <!--<td><input th:placeholder="MockResponse " th:field="*{mock}" required/></td>-->
+                                <td>
+                                    <button type="button" class="btn btn-primary" data-toggle="modal"
+                                            data-target="#exampleModal">Put
+                                    </button>
+                                </td>
+                                <div class="modal right fade" id="exampleModal" tabindex="-1" role="dialog"
+                                     aria-labelledby="exampleModalLabel" aria-hidden="true">
+                                    <div class="modal-dialog modal-full-height modal-right" role="document">
+                                        <div class="modal-content">
+                                            <div class="modal-header">
+                                                <h4 class="modal-title w-100" id="exampleModalLabel">Mock Response</h4>
+                                                <button type="button" class="close" data-dismiss="modal"
+                                                        aria-label="Close">
+                                                    <span aria-hidden="true">&times;</span>
+                                                </button>
+                                            </div>
+                                            <div class="modal-body">
+                                                <form>
+                                                    <div class="form-group">
+                                                        <label for="message-text" class="col-form-label">Please enter
+                                                            the
+                                                            text to be returned as the service response</label>
+                                                        <textarea rows="40" th:field="*{mock}"
+                                                                  class="form-control"
+                                                                  id="message-text"></textarea>
+                                                    </div>
+                                                </form>
+                                            </div>
+                                            <div class="modal-footer justify-content-center">
+                                                <button type="button" class="btn btn-primary" data-dismiss="modal">
+                                                    Submit
+                                                </button>
+                                                <!--<button type="button" class="btn btn-primary">Submit</button>-->
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
-                            </div>
 
 
-                        </tr>
-                        </tbody>
-                    </table>
-                </fieldset>
-            </form>
+                            </tr>
+                            </tbody>
+                        </table>
+                    </fieldset>
+                </form>
+            </div>
         </div>
     </div>
 </div>
