--- a/src/main/resources/templates/entries/edit.html
+++ b/src/main/resources/templates/entries/edit.html
@@ -28,94 +28,100 @@
     <!--</ul>-->
 </nav>
 
-<div class="container" style="margin-left: 40px">
-    <div class="row">
-    </div>
-    <div class="row">
-        <div class="col-xl-auto">
-            <form action="#" class="form-horizontal"
-                  th:action="@{/replace}"
-                  th:object="${wrapper}"
-                  method="post">
-                <fieldset style="display: inline-block;">
+<div class="row justify-content-center">
+    <div class="col-md-auto">
+        <div class="card">
+            <div class="card-body">
+                <form action="#" class="form-horizontal"
+                      th:action="@{/replace}"
+                      th:object="${wrapper}"
+                      method="post">
+                    <fieldset style="display: inline-block;">
 					<span>
                          <h1 style="display: inline-block;"> Edit Entries </h1>
 						    <input type="submit" id="submitButton" class="btn btn-success" th:value="Update"
                                    style="float: right;">
 					</span>
 
-                    <table class="table table-striped">
-                        <thead>
-                        <tr>
-                            <th> isMocked</th>
-                            <th> Service Name</th>
-                            <th> Route</th>
-                            <th> Status</th>
-                            <th> MockResponse</th>
-                            <th></th>
-                        </tr>
-                        </thead>
-                        <tbody>
-                        <tr th:each="entry, stat : *{temp}">
-                            <td>
-                                <input type="checkbox" th:field="*{temp[__${stat.index}__].mocked}"/></td>
-                            <td><input class="form-control form-control-lg" th:field="*{temp[__${stat.index}__].name}"  required pattern="^[a-zA-Z0-9_&-]+$"/></td>
-                            <td><input class="form-control form-control-lg" th:field="*{temp[__${stat.index}__].realUrl}" required pattern="https?://.+"/>
-                            </td>
-                            <td>
-                                <select class="browser-default custom-select form-control-lg" th:field="*{temp[__${stat.index}__].status}">
-                                    <option th:each="state : ${T(org.springframework.http.HttpStatus).values()}"
-                                            th:value="${{state}}"
-                                            th:text="${state}"
-                                            th:selected="*{temp[__${stat.index}__].status}"
-                                    >
-                                    </option>
-                                </select>
-                            </td>
-                            <td>
-                                <button type="button" class="btn btn-primary" data-toggle="modal"
-                                        th:data-target="${'#exampleModal' + entry.name}">View/Edit
-                                </button>
-                            </td>
-                            <div class="modal right fade" th:id="${'exampleModal' + entry.name}" tabindex="-1"
-                                 role="dialog"
-                                 aria-labelledby="exampleModalLabel" aria-hidden="true">
-                                <div class="modal-dialog modal-full-height modal-right" role="document">
-                                    <div class="modal-content">
-                                        <div class="modal-header">
-                                            <h5 class="modal-title" id="exampleModalLabel">Edit Response</h5>
-                                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                                                <span aria-hidden="true">&times;</span>
-                                            </button>
-                                        </div>
-                                        <div class="modal-body">
+                        <table class="table table-striped">
+                            <thead>
+                            <tr>
+                                <th> isMocked</th>
+                                <th> Service Name</th>
+                                <th> Route</th>
+                                <th> Status</th>
+                                <th> MockResponse</th>
+                                <th></th>
+                            </tr>
+                            </thead>
+                            <tbody>
+                            <tr th:each="entry, stat : *{temp}">
+                                <td>
+                                    <input type="checkbox" th:field="*{temp[__${stat.index}__].mocked}"/></td>
+                                <td><input class="form-control form-control-lg"
+                                           th:field="*{temp[__${stat.index}__].name}" required
+                                           pattern="^[a-zA-Z0-9_&-]+$"/></td>
+                                <td><input class="form-control form-control-lg"
+                                           th:field="*{temp[__${stat.index}__].realUrl}" required
+                                           pattern="https?://.+"/>
+                                </td>
+                                <td>
+                                    <select class="browser-default custom-select form-control-lg"
+                                            th:field="*{temp[__${stat.index}__].status}">
+                                        <option th:each="state : ${T(org.springframework.http.HttpStatus).values()}"
+                                                th:value="${{state}}"
+                                                th:text="${state}"
+                                                th:selected="*{temp[__${stat.index}__].status}"
+                                        >
+                                        </option>
+                                    </select>
+                                </td>
+                                <td>
+                                    <button type="button" class="btn btn-primary" data-toggle="modal"
+                                            th:data-target="${'#exampleModal' + entry.name}">View/Edit
+                                    </button>
+                                </td>
+                                <div class="modal right fade" th:id="${'exampleModal' + entry.name}" tabindex="-1"
+                                     role="dialog"
+                                     aria-labelledby="exampleModalLabel" aria-hidden="true">
+                                    <div class="modal-dialog modal-full-height modal-right" role="document">
+                                        <div class="modal-content">
+                                            <div class="modal-header">
+                                                <h5 class="modal-title" id="exampleModalLabel">Edit Response</h5>
+                                                <button type="button" class="close" data-dismiss="modal"
+                                                        aria-label="Close">
+                                                    <span aria-hidden="true">&times;</span>
+                                                </button>
+                                            </div>
+                                            <div class="modal-body">
                                                 <div class="form-group">
                                                     <label for="message-text" class="col-form-label">Mock
                                                         Response:</label>
                                                     <textarea rows="40" th:field="*{temp[__${stat.index}__].mock}"
                                                               class="form-control" id="message-text"></textarea>
                                                 </div>
-                                        </div>
-                                        <div class="modal-footer">
-                                            <button type="button" class="btn btn-primary" data-dismiss="modal">
-                                                Submit
-                                            </button>
-                                            <!--<button type="button" class="btn btn-primary">Save</button>-->
+                                            </div>
+                                            <div class="modal-footer">
+                                                <button type="button" class="btn btn-primary" data-dismiss="modal">
+                                                    Submit
+                                                </button>
+                                                <!--<button type="button" class="btn btn-primary">Save</button>-->
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
-                            </div>
-                            <td>
-                                <button type="button" class="close" aria-label="Close">
-                                    <a th:href="*{'/delete/' + temp[__${stat.index}__].name}" class="close"
-                                       aria-label="Close"> <span aria-hidden="true">&times;</span></a>
-                                </button>
-                            </td>
-                        </tr>
-                        </tbody>
-                    </table>
-                </fieldset>
-            </form>
+                                <td>
+                                    <button type="button" class="close" aria-label="Close">
+                                        <a th:href="*{'/delete/' + temp[__${stat.index}__].name}" class="close"
+                                           aria-label="Close"> <span aria-hidden="true">&times;</span></a>
+                                    </button>
+                                </td>
+                            </tr>
+                            </tbody>
+                        </table>
+                    </fieldset>
+                </form>
+            </div>
         </div>
     </div>
 </div>
