--- a/src/main/resources/templates/entries/allEntries.html
+++ b/src/main/resources/templates/entries/allEntries.html
@@ -24,11 +24,11 @@
 <body style="background-color:#ededed">
 <style>
     table th {
-        font-size: 1.0rem;
+        font-size: 1.5rem;
     }
 
     table td {
-        font-size: 0.95rem;
+        font-size: 1.45rem;
     }
 
 </style>
@@ -77,7 +77,7 @@
                     </div>
                     <!-- Grid column -->
                 </div>
-                <table id="sortable" class="table table-hover table-responsive mb-2">
+                <table id="sortable" class="table table-hover table-responsive mb-2 table-striped">
                     <thead>
                     <th > isMocked</th>
                     <th> ServiceName</th>
