--- a/src/main/resources/static/css/flow.sass
+++ b/src/main/resources/static/css/flow.sass
@@ -1,3 +1,5 @@
+@import ripple
+
 html, body
   height: 100%
   margin: 0
@@ -27,6 +29,7 @@ $my-color: rgb(119, 119, 119)
   *
     box-sizing: border-box
   .node
+    @extend %circle-ripple
     background: $node-color
     box-shadow: 5px solid black
     border: 1px solid black
@@ -91,7 +94,7 @@ $my-color: rgb(119, 119, 119)
         border-color: transparent transparent transparent white
       &:hover
         border: 2px solid #777
-        background-color: lighten($my-color,4%)
+        border-color: rgb(110,136,255)
 
     .input-title,.output-title
       vertical-align: middle
@@ -111,7 +114,7 @@ $my-color: rgb(119, 119, 119)
   .connection path
     fill: none
     stroke: #eee
-    stroke-width: 2px
+    stroke-width: 4px
     pointer-events: none
     &.active
       stroke: #aaa
